--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,165 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
-  </head>
-  <body>
+<html class="page" lang="ru">
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Кэт энерджи</title>
+</head>
 
-  </body>
+<body class="page__body">
+  <header class="page__header">
+    <div class="page-header__wrapper">
+      <a class="page-header__logo" href="#">
+        <img src="img/logo-mobile.svg" width="33" height="38" alt="Логотип сайта Кэт энерджи">
+      </a>
+      <a class="page-header__logo-title" href="#">
+        <img src="img/logo-2.svg" width="101" height="18" alt="Надпись Cat energy">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
+        <ul class="main-nav__list">
+          <li class="main-nav-item">
+            <a class="main-nav-link main-nav-link__current" href="#">Главная</a>
+          </li>
+          <li class="main-nav-item">
+            <a class="main-nav-link" href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="main-nav-item">
+            <a class="main-nav-link" href="form.html">Подбор программы</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main class="page-main">
+    <h1 class="visually-hidden">Магазин фитнесс-питания для котов Кэт энерджи</h1>
+    <section class="intro">
+      <div class="intro__wrapper">
+        <h2 class="intro__title">Функциональное<br> питание для котов</h2>
+        <p class="intro__lead">
+          Занялся собой? Займись котом!
+        </p>
+        <a class="intro__link" href="form.html">подобрать программу</a>
+    </section>
+    </div>
+    <section class="programs">
+      <h2 class="visually-hidden">Программы фитнесс-питания</h2>
+      <div class="programs__wrapper">
+        <article class="programs__item programs__item--slim">
+          <h3 class="program__title">
+            <span class="programs__icon programs__icon--slim"></span>
+            Похудение
+          </h3>
+          <article class="programs__item programs__item--pro">
+            <h3 class="program__title">
+              <span class="programs__icon programs__icon--pro"></span>
+              Набор массы
+            </h3>
+            <a class="programs__link" href="catalog.html">Каталог Slim</a>
+          </article>
+      </div>
+    </section>
+    <section class="features">
+      <div class="features__wrapper">
+        <h2 class="features__title">Как это работает</h2>
+        <ul class="features__list">
+          <li class="features__item features__item--icon-leaf">
+            <p class="features__text">
+              Функциональное питание содержит только полезные питательные вещества.
+            </p>
+          </li>
+          <li class="features__item features__item--icon-powder">
+            <p class="features__text">
+              Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+            </p>
+          </li>
+          <li class="features__item features__item--icon-fork">
+            <p class="features__text">
+              Замените один-два приема обычной еды на наше функциональное питание.
+            </p>
+          </li>
+          <li class="features__item features__item--icon-clock">
+            <p class="features__text">
+              Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+            </p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="example">
+      <div class="example__wrapper">
+        <h2 class="example__title">Живой пример</h2>
+        <p class="example__text">
+          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
+          изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+        </p>
+        <div class="example__progress progress">
+          <span class="progress__title">Снижение веса</span>
+          <span class="progress__value">5 кг</span>
+          <span class="progress__title">Затрачено времени</span>
+          <span class="progress__value">60 ДНЕЙ</span>
+        </div>
+        <p class="example__costs">
+          Затраты на питание:
+          <span class="example__costs-amount">15 000 руб.</span>
+        </p>
+        <section class="example__slider slider">
+          <img class="slider__image slider--fat-cat" src="/img/fat-cat.jpg" width="311" height="232" alt="Толстый кот">
+          <img class="slider__image slider--slim-cat visually-hidden" src="/img/slim-cat.jpg" width="311" height="232"
+            alt="Стройный кот">
+          <button class="slider__button" type="button"></button>
+        </section>
+      </div>
+    </section>
+  </main>
+
+  <footer class="page-footer">
+    <div class="page-footer__wrapper">
+      <div class="page-footer__contacts">
+        <h2 class="visually-hidden">Контакты</h2>
+        <div class="contacts__address">
+          <p>Приглашаем к сотрудничеству дилеров!</p>
+          <p>ул. Большая
+            Конюшенная, д. 19/8
+            Санкт-Петербург</p>
+        </div>
+        <div class="contacts__map">
+          <!--тут будет карта-->
+        </div>
+      </div>
+      <a class="page-footer__logo-title" href="#">
+        <img src="img/logo-2.svg" width="101" height="18" alt="Надпись Cat energy">
+      </a>
+      <div class="page-footer__social">
+        <h2 class="visually-hidden">Социальные сети</h2>
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link socials__link--vk" href="#"><span class="visually-hidden">В контакте</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link socials__link--ig" href="#"><span class="visually-hidden">Инстаграм</span>
+            </a>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link socials__link--fb" href="#"><span class="visually-hidden">Фейсбук</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="page-footer__copyright">
+        <h2 class="visually-hidden">Разработчик</h2>
+        <a class="copyright__link" href="https://htmlacademy.ru">
+          HTML Academy
+        </a>
+        <img src="img/htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy">
+      </div>
+    </div>
+  </footer>
+
+</body>
+
 </html>
