--- a/source/index.html
+++ b/source/index.html
@@ -7,27 +7,27 @@
 </head>
 
 <body class="page__body">
-  <header class="page__header">
+  <header class="page-header">
     <div class="page-header__wrapper">
       <a class="page-header__logo" href="#">
-        <img src="img/logo-mobile.svg" width="33" height="38" alt="Логотип сайта Кэт энерджи">
+        <img src="" width="33" height="38" alt="Логотип сайта Кэт энерджи">
       </a>
       <a class="page-header__logo-title" href="#">
-        <img src="img/logo-2.svg" width="101" height="18" alt="Надпись Cat energy">
+        <img src="" width="101" height="18" alt="Надпись Cat energy">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
         <ul class="main-nav__list">
-          <li class="main-nav-item">
-            <a class="main-nav-link main-nav-link__current" href="#">Главная</a>
+          <li class="main-nav__item">
+            <a class="main-nav__link main-nav__link--current" href="#">Главная</a>
           </li>
-          <li class="main-nav-item">
-            <a class="main-nav-link" href="catalog.html">Каталог продукции</a>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
           </li>
-          <li class="main-nav-item">
-            <a class="main-nav-link" href="form.html">Подбор программы</a>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </nav>
@@ -37,7 +37,7 @@
     <h1 class="visually-hidden">Магазин фитнесс-питания для котов Кэт энерджи</h1>
     <section class="intro">
       <div class="intro__wrapper">
-        <h2 class="intro__title">Функциональное<br> питание для котов</h2>
+        <h2 class="intro__title">Функциональное питание для котов</h2>
         <p class="intro__lead">
           Занялся собой? Займись котом!
         </p>
@@ -105,12 +105,21 @@
           Затраты на питание:
           <span class="example__costs-amount">15 000 руб.</span>
         </p>
-        <section class="example__slider slider">
-          <img class="slider__image slider--fat-cat" src="/img/fat-cat.jpg" width="311" height="232" alt="Толстый кот">
-          <img class="slider__image slider--slim-cat visually-hidden" src="/img/slim-cat.jpg" width="311" height="232"
-            alt="Стройный кот">
-          <button class="slider__button" type="button"></button>
-        </section>
+        <div class="slider">
+          <div class="slider__image slider__image--before">
+            <button class="slider__button" type="button">Было</button>
+            <img class="slider__image slider--fat-cat" src="" width="311" height="232" alt="Толстый кот">
+          </div>
+          <div class="slider__scale">
+          </div>
+          <div class="slider__handle">
+          </div>
+          <div class="slider__image slider__image--after">
+            <button class="slider__button" type="button">стало</button>
+            <img class="slider__image slider--slim-cat visually-hidden" src="" width="311" height="232"
+              alt="Стройный кот">
+          </div>
+        </div>
       </div>
     </section>
   </main>
@@ -130,22 +139,25 @@
         </div>
       </div>
       <a class="page-footer__logo-title" href="#">
-        <img src="img/logo-2.svg" width="101" height="18" alt="Надпись Cat energy">
+        <img src="" width="101" height="18" alt="Надпись Кэт энерджи">
       </a>
-      <div class="page-footer__social">
+      <div class="social">
         <h2 class="visually-hidden">Социальные сети</h2>
         <ul class="social__list">
           <li class="social__item">
-            <a class="social__link socials__link--vk" href="#"><span class="visually-hidden">В контакте</span>
+            <a class="social__link" href="#">
+              <span class="visually-hidden">В контакте</span>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link socials__link--ig" href="#"><span class="visually-hidden">Инстаграм</span>
+            <a class="social__link" href="#">
+              <span class="visually-hidden">Инстаграм</span>
             </a>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link socials__link--fb" href="#"><span class="visually-hidden">Фейсбук</span>
+            <a class="social__link" href="#">
+              <span class="visually-hidden">Фейсбук</span>
             </a>
           </li>
         </ul>
@@ -155,7 +167,7 @@
         <a class="copyright__link" href="https://htmlacademy.ru">
           HTML Academy
         </a>
-        <img src="img/htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy">
+        <img src="" width="27" height="34" alt="Логотип HTML Academy">
       </div>
     </div>
   </footer>
