Правки по разметке главной

--- a/source/index.html
+++ b/source/index.html
@@ -126,7 +126,7 @@
 
   <footer class="page-footer">
     <div class="page-footer__wrapper">
-      <div class="page-footer__contacts">
+      <div class="contacts">
         <h2 class="visually-hidden">Контакты</h2>
         <div class="contacts__address">
           <p>Приглашаем к сотрудничеству дилеров!</p>
@@ -162,12 +162,14 @@
           </li>
         </ul>
       </div>
-      <div class="page-footer__copyright">
+      <div class="copyright">
         <h2 class="visually-hidden">Разработчик</h2>
         <a class="copyright__link" href="https://htmlacademy.ru">
           HTML Academy
         </a>
-        <img src="" width="27" height="34" alt="Логотип HTML Academy">
+        <a href="https://htmlacademy.ru">
+          <img src="" width="27" height="34" alt="Логотип HTML Academy">
+        </a>
       </div>
     </div>
   </footer>
