--- a/source/index.html
+++ b/source/index.html
@@ -38,51 +38,35 @@
     <section class="intro">
       <div class="intro__wrapper">
         <h2 class="intro__title">Функциональное питание для котов</h2>
-        <p class="intro__lead">
-          Занялся собой? Займись котом!
-        </p>
-        <a class="intro__link" href="form.html">подобрать программу</a>
+        <p class="intro__lead">Занялся собой? Займись котом!</p>
+        <a class="intro__link" href="form.html">Подобрать программу</a>
+      </div>
     </section>
-    </div>
     <section class="programs">
       <h2 class="visually-hidden">Программы фитнесс-питания</h2>
-      <div class="programs__wrapper">
-        <article class="programs__item programs__item--slim">
-          <h3 class="program__title">
-            <span class="programs__icon programs__icon--slim"></span>
-            Похудение
-          </h3>
-          <article class="programs__item programs__item--pro">
-            <h3 class="program__title">
-              <span class="programs__icon programs__icon--pro"></span>
-              Набор массы
-            </h3>
-            <a class="programs__link" href="catalog.html">Каталог Slim</a>
-          </article>
-      </div>
+        <ul class="programs-list">
+          <li class="programs__item programs programs--slim">Похудение</li>
+          <li class="programs__item programs programs--pro">Набор массы</li>
+          <a class="programs__link" href="catalog.html">Каталог Slim</a>
     </section>
     <section class="features">
       <div class="features__wrapper">
         <h2 class="features__title">Как это работает</h2>
         <ul class="features__list">
           <li class="features__item features__item--icon-leaf">
-            <p class="features__text">
-              Функциональное питание содержит только полезные питательные вещества.
+            <p class="features__text">Функциональное питание содержит только полезные питательные вещества.
             </p>
           </li>
           <li class="features__item features__item--icon-powder">
-            <p class="features__text">
-              Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+            <p class="features__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
             </p>
           </li>
           <li class="features__item features__item--icon-fork">
-            <p class="features__text">
-              Замените один-два приема обычной еды на наше функциональное питание.
+            <p class="features__text">Замените один-два приема обычной еды на наше функциональное питание.
             </p>
           </li>
           <li class="features__item features__item--icon-clock">
-            <p class="features__text">
-              Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+            <p class="features__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
             </p>
           </li>
         </ul>
@@ -91,8 +75,8 @@
     <section class="example">
       <div class="example__wrapper">
         <h2 class="example__title">Живой пример</h2>
-        <p class="example__text">
-          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
+        <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+          Отличный результат без
           изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
         </p>
         <div class="example__progress progress">
@@ -101,23 +85,19 @@
           <span class="progress__title">Затрачено времени</span>
           <span class="progress__value">60 ДНЕЙ</span>
         </div>
-        <p class="example__costs">
-          Затраты на питание:
+        <p class="example__costs">Затраты на питание:
           <span class="example__costs-amount">15 000 руб.</span>
         </p>
         <div class="slider">
-          <div class="slider__image slider__image--before">
-            <button class="slider__button" type="button">Было</button>
-            <img class="slider__image slider--fat-cat" src="" width="311" height="232" alt="Толстый кот">
-          </div>
-          <div class="slider__scale">
-          </div>
-          <div class="slider__handle">
-          </div>
-          <div class="slider__image slider__image--after">
-            <button class="slider__button" type="button">стало</button>
-            <img class="slider__image slider--slim-cat visually-hidden" src="" width="311" height="232"
-              alt="Стройный кот">
+          <img class="slider__image slider__image--fat-cat" src="" width="311" height="232" alt="Толстый кот">
+          <img class="slider__image slider__image--slim-cat" src="" width="311" height="232" alt="Стройный кот">
+          <div class="slider-controls">
+            <span class="slider-controls__before">Было</span>
+            <div class="slider__toggle">
+              <div class="slider__handle">
+              </div>
+            </div>
+            <span class="slider-controls__after">Стало</span>
           </div>
         </div>
       </div>
@@ -126,7 +106,7 @@
 
   <footer class="page-footer">
     <div class="page-footer__wrapper">
-      <div class="contacts">
+      <div class="page-footer__contacts contacts">
         <h2 class="visually-hidden">Контакты</h2>
         <div class="contacts__address">
           <p>Приглашаем к сотрудничеству дилеров!</p>
@@ -141,7 +121,7 @@
       <a class="page-footer__logo-title" href="#">
         <img src="" width="101" height="18" alt="Надпись Кэт энерджи">
       </a>
-      <div class="social">
+      <div class="page-footer__social social">
         <h2 class="visually-hidden">Социальные сети</h2>
         <ul class="social__list">
           <li class="social__item">
@@ -153,7 +133,6 @@
             <a class="social__link" href="#">
               <span class="visually-hidden">Инстаграм</span>
             </a>
-            </a>
           </li>
           <li class="social__item">
             <a class="social__link" href="#">
@@ -162,12 +141,12 @@
           </li>
         </ul>
       </div>
-      <div class="copyright">
+      <div class="page-footer__copyright copyright">
         <h2 class="visually-hidden">Разработчик</h2>
         <a class="copyright__link" href="https://htmlacademy.ru">
           HTML Academy
         </a>
-        <a href="https://htmlacademy.ru">
+        <a class="copyright__link" href="https://htmlacademy.ru">
           <img src="" width="27" height="34" alt="Логотип HTML Academy">
         </a>
       </div>
