--- a/source/index.html
+++ b/source/index.html
@@ -44,29 +44,38 @@
     </section>
     <section class="programs">
       <h2 class="visually-hidden">Программы фитнесс-питания</h2>
-        <ul class="programs-list">
-          <li class="programs__item programs programs--slim">Похудение</li>
-          <li class="programs__item programs programs--pro">Набор массы</li>
-          <a class="programs__link" href="catalog.html">Каталог Slim</a>
+      <ul class="programs-list">
+        <li class="programs__item program program--slim">
+          <h3 class="program__title">Похудение</h3>
+          <p class="program__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на
+            диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <a class="program__link" href="catalog.html">Каталог Slim</a>
+        </li>
+        <li class="programs__item program program--pro">
+          <h3 class="program__title">Набор массы</h3>
+          <p class="program__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет
+            вашему коту нарастить необходимые мышцы!</p>
+          <a class="program__link" href="catalog.html">Каталог Slim</a>
+        </li>
     </section>
     <section class="features">
       <div class="features__wrapper">
         <h2 class="features__title">Как это работает</h2>
         <ul class="features__list">
-          <li class="features__item features__item--icon-leaf">
-            <p class="features__text">Функциональное питание содержит только полезные питательные вещества.
+          <li class="features__item feature feature--icon-leaf">
+            <p class="feature__text">Функциональное питание содержит только полезные питательные вещества.
             </p>
           </li>
-          <li class="features__item features__item--icon-powder">
-            <p class="features__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+          <li class="features__item feature feature--icon-powder">
+            <p class="feature__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
             </p>
           </li>
-          <li class="features__item features__item--icon-fork">
-            <p class="features__text">Замените один-два приема обычной еды на наше функциональное питание.
+          <li class="features__item feature feature--icon-fork">
+            <p class="feature__text">Замените один-два приема обычной еды на наше функциональное питание.
             </p>
           </li>
-          <li class="features__item features__item--icon-clock">
-            <p class="features__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+          <li class="features__item feature feature--icon-clock">
+            <p class="feature__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
             </p>
           </li>
         </ul>
