Правки по разметке внутренних страниц

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -172,51 +172,51 @@
             </table>
             <button class="product__button button" type="button">Заказать</button>
           </li>
+          <li class="catalog__item product">
+            <a class="product__link">
+              <h3 class="product__title">Показать еще 100500 товаров</h3>
+            </a>
+            <p class="product__text">На самом деле вкусов гораздо больше!</p>
+            <a class="product__button">Показать все</a>
+          </li>
         </ul>
-        <div class="catalog__more-products more-products">
-          <a class="more-products__link">
-            <h3 class="more-products__title">Показать еще 100500 товаров</h3>
-          </a>
-          <p class="more-products__text">На самом деле вкусов гораздо больше!</p>
-          <a class="more-products__button">Показать все</a>
-        </div>
       </div>
     </section>
     <section class="add-more-goods">
       <h2 class="add-more-goods__title">Дополнительные товары</h2>
       <div class="add-more-goods__wrapper">
         <ul class="add-more-goods__list">
-          <li class="add-more-goods__item">
-            <h3 class="add-more-goods__name">Сахарозаменитель</h3>
-            <p class="add-more-goods__info">
-              <span class="add-more-goods__size">1 упаковка (100 г)</span>
-              <span class="add-more-goods__price">200 Р.</span>
+          <li class="add-more-goods__item additional-product">
+            <h3 class="additional-product__name">Сахарозаменитель</h3>
+            <p class="additional-product__info">
+              <span class="additional-product__size">1 упаковка (100 г)</span>
+              <span class="additional-product__price">200 Р.</span>
             </p>
-            <button class="add-more-goods__button button" type="button">Заказать</button>
+            <button class="additional-product__button button" type="button">Заказать</button>
           </li>
-          <li class="add-more-goods__item">
-            <h3 class="add-more-goods__name">Питьевая вода</h3>
-            <p class="add-more-goods__info">
-              <span class="add-more-goods__size">5 литров</span>
-              <span class="add-more-goods__price">50 Р.</span>
+          <li class="add-more-goods__item additional-product">
+            <h3 class="additional-product__name">Питьевая вода</h3>
+            <p class="additional-product__info">
+              <span class="additional-product__size">5 литров</span>
+              <span class="additional-product__price">50 Р.</span>
             </p>
-            <button class="add-more-goods__button button" type="button">Заказать</button>
+            <button class="additional-product__button button" type="button">Заказать</button>
           </li>
-          <li class="add-more-goods__item">
-            <h3 class="add-more-goods__name">Молоко</h3>
-            <p class="add-more-goods__info">
-              <span class="add-more-goods__size">1 литр</span>
-              <span class="add-more-goods__price">100 Р.</span>
+          <li class="add-more-goods__item additional-product">
+            <h3 class="additional-product__name">Молоко</h3>
+            <p class="additional-product__info">
+              <span class="additional-product__size">1 литр</span>
+              <span class="additional-product__price">100 Р.</span>
             </p>
-            <button class="add-more-goods__button button" type="button">Заказать</button>
+            <button class="additional-product__button button" type="button">Заказать</button>
           </li>
-          <li class="add-more-goods__item">
-            <h3 class="add-more-goods__name">Витамины</h3>
-            <p class="add-more-goods__info">
-              <span class="add-more-goods__size">1 упаковка (30 г)</span>
-              <span class="add-more-goods__price">300 Р.</span>
+          <li class="add-more-goods__item additional-product">
+            <h3 class="additional-product__name">Витамины</h3>
+            <p class="additional-product__info">
+              <span class="additional-product__size">1 упаковка (30 г)</span>
+              <span class="additional-product__price">300 Р.</span>
             </p>
-            <button class="add-more-goods__button button" type="button">Заказать</button>
+            <button class="additional-product__button button" type="button">Заказать</button>
           </li>
         </ul>
         <div class="add-more-goods__promo promo">
