Внесла правки согласно комментам наставника

--- a/source/form.html
+++ b/source/form.html
@@ -161,8 +161,8 @@
       <div class="page-footer__contacts contacts">
         <h2 class="visually-hidden">Контакты</h2>
         <div class="contacts__text-wrapper contacts__text-wrapper--white">
-          <p class="contacts__greeting contacts__part">Приглашаем к сотрудничеству дилеров!</p>
-          <p class="contacts__address contacts__part">ул. Большая
+          <p class="contacts__greeting">Приглашаем к сотрудничеству дилеров!</p>
+          <p class="contacts__address">ул. Большая
             Конюшенная, д. 19/8
             <span class="contacts__city">Санкт-Петербург</span>
           </p>
