Адаптивная сетка главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="preload" href="fonts/oswaldregular.woff2">
   <link rel="preload" href="fonts/oswaldmedium.woff2">
@@ -12,7 +13,7 @@
 
 <body class="page__body">
   <header class="page-header page-header--index">
-    <div class="page-header__wrapper">
+    <div class="page-header__wrapper container">
       <a class="page-header__logo" href="#">
         <img src="img/logo-mobile.png" width="33" height="38" alt="Логотип сайта Кэт энерджи">
       </a>
@@ -20,10 +21,11 @@
         <img src="" width="101" height="18" alt="Надпись Cat energy">
       </a>
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">
+        <button class="main-nav__toggle toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
+          <span class="toggle_button"></span>
         </button>
-        <ul class="main-nav__list">
+        <ul class="main-nav__list main-nav__list--index">
           <li class="main-nav__item">
             <a class="main-nav__link main-nav__link--current" href="#">Главная</a>
           </li>
@@ -40,31 +42,36 @@
   <main class="page-main">
     <h1 class="visually-hidden">Магазин фитнесс-питания для котов Кэт энерджи</h1>
     <section class="intro">
-      <div class="intro__wrapper">
-        <h2 class="intro__title">Функциональное питание для котов</h2>
-        <p class="intro__lead">Занялся собой? Займись котом!</p>
-        <a class="intro__link button" href="form.html">Подобрать программу</a>
+      <div class="intro__wrapper container">
+        <h2 class="intro__content intro__title">Функциональное питание для котов</h2>
+        <p class="intro__content intro__lead">Занялся собой? Займись котом!</p>
+        <img class="intro-img" src="img/index-can-mobile1.jpg" alt="Упаковка основного продукта" width="280"
+          height="270">
+        <a class="intro__content intro__link button" href="form.html">Подобрать программу</a>
       </div>
     </section>
     <section class="programs">
       <h2 class="visually-hidden">Программы фитнесс-питания</h2>
-      <ul class="programs-list">
-        <li class="programs__item program program--slim">
-          <h3 class="program__title">Похудение</h3>
-          <p class="program__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на
-            диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-          <a class="program__link" href="catalog.html">Каталог Slim</a>
-        </li>
-        <li class="programs__item program program--pro">
-          <h3 class="program__title">Набор массы</h3>
-          <p class="program__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет
-            вашему коту нарастить необходимые мышцы!</p>
-          <a class="program__link" href="catalog.html">Каталог Slim</a>
-        </li>
-      </ul>
+      <div class="programs__wrapper container">
+        <ul class="programs-list">
+          <li class="programs__item program program--slim">
+            <h3 class="program__title">Похудение</h3>
+            <p class="program__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на
+              диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+            <a class="program__link" href="catalog.html">Каталог Slim</a>
+          </li>
+          <li class="programs__item program program--pro">
+            <h3 class="program__title">Набор массы</h3>
+            <p class="program__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
+              поможет
+              вашему коту нарастить необходимые мышцы!</p>
+            <a class="program__link" href="catalog.html">Каталог Slim</a>
+          </li>
+        </ul>
+      </div>
     </section>
     <section class="features">
-      <div class="features__wrapper">
+      <div class="features__wrapper container">
         <h2 class="features__title">Как это работает</h2>
         <ul class="features__list">
           <li class="features__item feature feature--icon-leaf">
@@ -87,31 +94,43 @@
       </div>
     </section>
     <section class="example">
-      <div class="example__wrapper">
-        <h2 class="example__title">Живой пример</h2>
-        <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
-          Отличный результат без
-          изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-        </p>
-        <div class="example__progress progress">
-          <span class="progress__title">Снижение веса</span>
-          <span class="progress__value">5 кг</span>
-          <span class="progress__title">Затрачено времени</span>
-          <span class="progress__value">60 ДНЕЙ</span>
+      <div class="example__wrapper container">
+        <div class="example__content">
+          <h2 class="example__title">Живой пример</h2>
+          <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+            Отличный результат без
+            изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+          </p>
+          <div class="example__data">
+            <div class="example__progress">
+              <div class="progress">
+                <span class="progress__title">Снижение веса</span>
+                <span class="progress__value">5 кг</span>
+                <div class="progress">
+                  <span class="progress__title">Затрачено времени</span>
+                  <span class="progress__value">60 ДНЕЙ</span>
+                </div>
+              </div>
+            </div>
+            <p class="example__costs">Затраты на питание:
+              <span class="example__costs-amount">15 000 руб.</span>
+            </p>
+          </div>
         </div>
-        <p class="example__costs">Затраты на питание:
-          <span class="example__costs-amount">15 000 руб.</span>
-        </p>
         <div class="slider">
-          <img class="slider__image slider__image--fat-cat" src="" width="311" height="232" alt="Толстый кот">
-          <img class="slider__image slider__image--slim-cat" src="" width="311" height="232" alt="Стройный кот">
+          <input type="radio" id="fat-cat" class="slider__fat-cat visually-hidden" name="image-toggle">
+          <input type="radio" id="slim-cat" class="slider__slim-cat visually-hidden" name="image-toggle">
+          <div class="slider__images">
+            <img class="slider__image slider__image--fat-cat" src="img/before-mobile1.jpg" width="311" height="232" alt="Толстый кот">
+            <img class="slider__image slider__image--slim-cat" src="" width="311" height="232" alt="Стройный кот">
+          </div>
           <div class="slider-controls">
-            <span class="slider-controls__before">Было</span>
-            <div class="slider__toggle">
+            <label for="fat-cat" class="slider__button slider__button--fat-cat">Было</label>
+            <div class="slider__scale">
               <div class="slider__handle">
               </div>
             </div>
-            <span class="slider-controls__after">Стало</span>
+            <label for="slim-cat" class="slider__button slider__button--slim-cat">Стало</label>
           </div>
         </div>
       </div>
@@ -133,8 +152,8 @@
         </div>
       </div>
       <div class="page-footer__logo">
-        <a class="page-footer__logo-link" href="#">
-          <img src="img/logo 2.svg" width="101" height="18" alt="Надпись Кэт энерджи">
+        <a class="page-footer__logo-title" href="#">
+          <img class="page-header__logo-img" src="img/logo 2.svg" width="101" height="18" alt="Надпись Кэт энерджи">
         </a>
       </div>
       <div class="page-footer__social social">
