--- a/source/form.html
+++ b/source/form.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Кэт энерджи - Форма подбора программы</title>
   <link rel="preload" href="fonts/oswaldregular.woff2">
   <link rel="preload" href="fonts/oswaldmedium.woff2">
