--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
 
 <body class="page__body">
   <header class="page-header">
-    <div class="page-header__wrapper container">
+    <div class="page-header__wrapper">
       <a class="page-header__logo" href="#">
         <img src="img/logo-mobile.png" width="33" height="38" alt="Логотип сайта Кэт энерджи">
       </a>
@@ -120,7 +120,7 @@
           <input type="radio" id="fat-cat" class="slider__fat-cat visually-hidden" name="image-toggle">
           <input type="radio" id="slim-cat" class="slider__slim-cat visually-hidden" name="image-toggle">
           <div class="slider__images">
-            <img class="slider__image slider__image--fat-cat" src="img/before-mobile1.jpg" width="311" height="232" alt="Толстый кот">
+            <img class="slider__image slider__image--fat-cat" src="img/before-mobile1.png" width="311" height="232" alt="Толстый кот">
             <img class="slider__image slider__image--slim-cat" src="" width="311" height="232" alt="Стройный кот">
           </div>
           <div class="slider-controls">
@@ -180,8 +180,8 @@
         <a class="copyright__link" href="https://htmlacademy.ru">
           HTML Academy
         </a>
-        <a href="https://htmlacademy.ru">
-          <img class="copyright__logo" src="img/htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy">
+        <a class="copyright__logo" href="https://htmlacademy.ru">
+          <img src="img/htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy">
         </a>
       </div>
     </div>
