Добавила планшетную версию

--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
   <header class="page-header">
     <div class="page-header__wrapper">
       <a class="page-header__logo" href="#">
-        <img src="img/logo-mobile.png" width="33" height="38" alt="Логотип сайта Кэт энерджи">
+        <img class="page-header__logo-img" src="img/logo-mobile.png" width="33" height="38" alt="Логотип сайта Кэт энерджи">
       </a>
       <a class="page-header__logo-title" href="#">
         <img src="img/logo 2.svg" width="101" height="18" alt="Надпись Cat energy">
@@ -51,7 +51,7 @@
     </section>
     <section class="programs">
       <h2 class="visually-hidden">Программы фитнесс-питания</h2>
-      <div class="programs__wrapper">
+      <div class="programs__wrapper container">
         <ul class="programs__list">
           <li class="programs__item program program--slim">
             <h3 class="program__title">Похудение</h3>
@@ -152,7 +152,7 @@
       <div class="page-footer__bottom container">
       <div class="page-footer__logo">
         <a class="page-footer__logo-title" href="#">
-          <img class="page-header__logo-img" src="img/logo 2.svg" width="101" height="18" alt="Надпись Кэт энерджи">
+          <img src="img/logo 2.svg" width="101" height="18" alt="Надпись Кэт энерджи">
         </a>
       </div>
       <div class="page-footer__social social">
