--- a/source/index.html
+++ b/source/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="page__body">
-  <header class="page-header">
+  <header class="page-header page-header--background">
     <div class="page-header__wrapper container">
       <a class="page-header__logo" href="#">
         <img class="page-header__logo-img" src="img/logo-mobile.png" width="33" height="38"
@@ -125,7 +125,7 @@
           <div class="slider__images">
             <img class="slider__image slider__image--fat-cat" src="img/before-mobile1.png" width="311" height="232"
               alt="Толстый кот">
-            <img class="slider__image slider__image--slim-cat" src="" width="311" height="232" alt="Стройный кот">
+            <img class="slider__image slider__image--slim-cat" src="img/after-desktop.png" width="311" height="232" alt="Стройный кот">
           </div>
           <div class="slider-controls">
             <label for="fat-cat" class="slider__button slider__button--fat-cat">Было</label>
