--- a/source/index.html
+++ b/source/index.html
@@ -25,7 +25,7 @@
         <span class="visually-hidden">Открыть меню</span>
       </button>
     </div>
-    <div class="page-header--index">
+    <div class="page-header--navigation">
       <nav class="main-nav">
         <ul class="main-nav__list">
           <li class="main-nav__item">
@@ -43,13 +43,13 @@
   </header>
   <main class="page-main">
     <h1 class="visually-hidden">Магазин фитнесс-питания для котов Кэт энерджи</h1>
-    <section class="intro">
-      <div class="intro__wrapper container">
-        <h2 class="intro__content intro__title">Функциональное питание для котов</h2>
-        <p class="intro__content intro__lead">Занялся собой? Займись котом!</p>
+    <section class="intro container">
+      <div class="intro__wrapper">
+        <h2 class="intro__title">Функциональное питание для котов</h2>
+        <p class="intro__lead">Занялся собой? Займись котом!</p>
         <img class="intro__img" src="img/index-can-mobile1.png" alt="Упаковка основного продукта" width="280"
           height="270">
-        <a class="intro__content intro__link button" href="form.html">Подобрать программу</a>
+        <a class="intro__link button" href="form.html">Подобрать программу</a>
       </div>
     </section>
     <section class="programs">
